--- a/myCSS.css
+++ b/myCSS.css
@@ -44,7 +44,7 @@ body {
 	height: 50px;
 	text-align: center;
 a:link {
-     color: #000000;
+     color: #7F9CFS;
 }
 a:visited {
      color: #000;
